fixed navbar issue with pushing hamburger icon to the next line on iphone 5

--- a/car-reviews/src/components/MainPage/navbar.css
+++ b/car-reviews/src/components/MainPage/navbar.css
@@ -1,32 +1,3 @@
-/* .navbar-container {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: #2F77F3;
-    z-index: 3;
-}
-
-.nc {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.navbar-item {
-    color: white;
-    font-size: 1.1em;
-}
-
-.navbar-item:hover {
-    color: #D3E3FC;
-}
-
-.icon {
-    height: 30px;
-    width: 30px;
-} */
-
 header {
     color: #fff;
 }
@@ -49,4 +20,11 @@ header {
 
 .navbar-toggler-icon {
     color: #fff !important;
+}
+
+@media (max-width: 500px){
+    .main-navbar__title {
+        font-size: 1rem;
+        font-weight: 100;
+    }
 }
